--- a/uj.html
+++ b/uj.html
@@ -1,2 +1,31 @@
-# veronica-chamaedrys.github.io
-infóházi
+<!DOCTYPE html>
+<html>
+<head>
+<title> Első próbálkozásaim </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="új.css"/>
+
+<link href="https://fonts.googleapis.com/css?family=Dr+Sugiyama&display=swap" rel="stylesheet"> 
+
+
+</head>
+<body>
+<a href="új.html"><img src="focim.png" alt="uhumm. ezt szívtad." width="50%" style="padding: 25px"></a>
+<ul>
+  <li><a class="active" href="új.html">Bemutatkozás</a></li>
+  <li><a href="munka.html">Munkáim</a></li>
+  <li><a href="elerhetosseg.html">Elérhetősség</a></li>
+  
+</ul>
+
+<div align="center" style="padding: 55px">
+  <h2>
+    <img src="43.JPG" alt="szivacs" width="20%" align="left" style="padding-right: 27px">
+    <img src="44.JPG" alt="még nagyobb" width="20%" align="right" style="padding-left: 27px">
+    Bemutatkozás
+  </h2>
+  <p>Volt egyszer hol nem volt, volt egyszer egy szegény kislány aki állást keressett. Ez az oldal azért jött létre, hogy ez a szegény kislány megkaphassa azt a nagyon vágyott munkát, ezzel elnyerve a társadalmi megbescülés oly igen áhított dicsőségét, és nem mellesleg a szőkeherceg kezét. A kisleány különböző egyszerű, és kevésbé egyszerű kézimunkával kereste kenyerét, több s kevesebb sikerrel. Kontárkodott már bőrművesek mellett, szolgált falképrestaurátoroknál, és fűzött már gyöngyöt megélhetése érdekében.<br> Ez a szerencsétlen gyermek én voltam. Segíts meg hát annyival, hogy legalább végignézed, e szerény tákolmányt. </p>
+</div>
+
+</body>
+</html>
